@@ -1,5 +1,6 @@
 package com.ceos.widgetph;
 
+import java.util.Collections;
 import java.util.Map;
 import org.csstudio.display.builder.model.WidgetDescriptor;
 import org.csstudio.display.builder.model.WidgetFactory;
@@ -11,8 +12,17 @@ import org.csstudio.display.builder.representation.spi.WidgetRepresentationsServ
  */
 public class HelloWidgetRepresentationsService implements WidgetRepresentationsService {
 
+    static {
+        System.err.println("--- HelloWidgetRepresentationsSerice: Registrando Widget ---");
+        WidgetFactory.getInstance().addWidgetType(new HelloWidgetDescriptor());
+    }
+
     @Override
     public Map<WidgetDescriptor, WidgetRepresentationFactory<?, ?>> getWidgetRepresentationFactories() {
-        return Map.of(new HelloWidgetDescriptor(), new HelloWidgetRepresentationFactory());
+//        return Map.of(new HelloWidgetDescriptor(), new HelloWidgetRepresentationFactory());
+
+        return Collections.singletonMap(
+                WidgetFactory.getInstance().getWidgetDescriptor(HelloWidget.WIDGET_TYPE),
+                new HelloWidgetRepresentationFactory());
     }
 }
